# dont-mockup-again

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  spec.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: bundle-pipeline.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: generate_icon.py  icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/hooks/: useBusyRunner.ts  useDesktopEnvironment.ts  useExportAction.ts  useOnboardingActions.ts  usePersistProjectSnapshot.ts  usePipelineActions.ts  usePreviewLoaders.ts  useProjectBootstrapPaths.ts  useProjectFileActions.ts  useProjectImageAssets.ts  useProjectImageUploadHandlers.ts  useProjectSelectionSync.ts  useProjectSlotActions.ts  useProjectWorkflowActions.ts  useScreenWorkflowState.tsx  useTemplateEditorActions.ts  useWorkflowNavigation.ts  useWorkflowStepOptions.ts
apps/desktop/src/lib/: async-utils.ts  desktop-runtime.ts  export-preview-renderer.ts  json-utils.ts  output-dir.ts  preview-file-loaders.ts  preview-rendering.ts  project-model.ts  slot-editor.ts
apps/desktop/src/workflows/: ExportStepPanel.tsx  ExportWorkflowPage.tsx  LocalizationStepPanel.tsx  PreviewStepPanel.tsx  (+4 more)
docs/: index.html
examples/: byoy.sample.json  sample.dma.json  sample.storeshot.json
scripts/: generate-sample-assets.js  pipeline.js  render-sample.js
tests/: acceptance.test.js  llm-cli.test.js
(+20 files in other folders)
